# BugDetectiveAI

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: bugdetective-description.mdc
Bugdetectiveai/scr/: README.md  test_single_sample.py
Bugdetectiveai/scr/bug_detective/: README.md  __init__.py  detective.py
Bugdetectiveai/scr/data_loader/: README.md  __init__.py  loader.py  test_loader.py
Bugdetectiveai/scr/examples/: __init__.py  basic_usage.py  metrics_storage_example.py  single_test.py  visualization_example.py
Bugdetectiveai/scr/llm_models/: README.md  README_prompt.md  __init__.py  base_model.py  open_router.py  openai_model.py  prompt.py  system_prompts.txt  test_prompt.py
Bugdetectiveai/scr/notebooks/: Compare_results.ipynb  EDA.ipynb  chat.ipynb  create_experiment.ipynb  duplicates.ipynb  stats.ipynb  tidy_responses.ipynb
Bugdetectiveai/scr/structured_output/: __init__.py  output_processor.py  schemas.py
Bugdetectiveai/scr/tests/: README.md  run_all_tests.py  simple_test_runner.py  test_base_model.py  test_bug_detective.py  test_diff_metrics.py  test_integration.py  test_metrics_storage.py  test_openai_model.py  test_progress_monitoring.py  test_structured_output.py
thesis/: .gitignore  Makefile  build.sh  tese.aux  tese.bcf  tese.fdb_latexmk  tese.fls  tese.lof  tese.lot  tese.out  tese.run.xml  tese.tex  tese.toc
thesis/ApeA/: apendiceA.tex
thesis/Cap1/: cap1.tex
thesis/Cap2/: cap2.tex
thesis/Cap3/: cap3.tex
thesis/Cap4/: cap4.tex
thesis/Cap5/: cap5.tex
thesis/Referencias/: referencias.bib
(+13 files in other folders)
