[tool.poetry]
name = "bugdetectiveai"
version = "0.1.0"
description = "multiple LLMs to eval over buggy code"
authors = ["FernandoZanchitta <fernandozanchitta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
patool = "^3.1.0"
pandas = "1.5.3"
numpy = "1.23.2"
llama-cpp-python = "^0.3.6"
huggingface-hub = "^0.27.1"
tqdm = "^4.67.1"
ipywidgets = "^8.1.5"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
scikit-learn = "^1.0.0"
openai = "^1.91.0"
jinja2 = "^3.1.0"
codebleu = "^0.7.0"
tree-sitter-python = "0.21"
ruff = "^0.12.2"
zss = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
